--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.swiper-pagination-bullet-active {
+	background-color: #333333 !important;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+	color: #f2f2f2 !important;
+}
